[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "apns2"
version = "0.7.1"
description = "A python library for interacting with the Apple Push Notification Service via HTTP/2 protocol"
authors = [{ name = "Sergey Petrov", email = "me@pr0ger.prg" }]
requires-python = ">=3.7"
readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "cryptography>=1.7.2",
    "httpx[http2]>=0.13.0",
    "pyjwt>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest",
    "freezegun",
]

[tool.mypy]
python_version = "3.7"
strict = true

[tool.pylint.design]
max-args = 10
max-attributes = 10

[tool.pylint.format]
max-line-length = 120

[tool.pylint.'messages control']
disable = "missing-docstring, too-few-public-methods, locally-disabled, invalid-name"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py37, py38, py39, py310
isolated_build = True

[testenv]
whitelist_externals = poetry
commands =
    poetry install -v
    poetry run pytest {posargs}
"""
